# EasyPaint

./: .gitignore  CMakeLists.txt  README.md
sources/: imagearea.cpp
sources/effects/: binarizationeffect.cpp  binarizationeffect.h  gammaeffect.cpp  gammaeffect.h  grayeffect.cpp  grayeffect.h
test/: BinarizationEffectTest.cpp  BinarizationEffectTest.h  CMakeLists.txt  GammaEffectTest.cpp  GammaEffectTest.h  GrayEffectTest.cpp  GrayEffectTest.h  testmain.cpp
